--- a/BackEndJava/las-backend-information-4000/src/main/resources/application.yaml
+++ b/BackEndJava/las-backend-information-4000/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 server:
-    port: 3000
+    port: 4000
 # 数据源
 spring:
     application:
-        name: las-backend-user-3000
+        name: las-backend-information-4000
     cloud:
         nacos:
             config:
@@ -19,20 +19,6 @@ spring:
                     username: root
                     password: LASDevsql2023!
                     driver-class-name: com.mysql.cj.jdbc.Driver
-    # redis caching
-    cache:
-        type: redis
-    redis:
-        host: 127.0.0.1
-        timeout: 3000ms
-        port: 6379
-        database: 0
-        lettuce:
-            pool:
-                max-active: 10
-                max-idle: 10
-                max-wait: 3000ms
-                min-idle: 20
 # log4j2
 logging:
     level:
