--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.3",
+    "typescript-cookie": "^1.0.6",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
